Remove the google webfonts @import

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1992,7 +1992,7 @@
 			-webkit-transition: opacity 0.2s ease-in-out;
 			-ms-transition: opacity 0.2s ease-in-out;
 			transition: opacity 0.2s ease-in-out;
-			background: url("images/overlay.png");
+			background: url("../images/overlay.png");
 			border-radius: 0.35em;
 			content: '';
 			display: block;
@@ -2037,7 +2037,7 @@
 			}
 
 			.image.thumb:hover:before {
-				background: url("images/overlay.png"), url("images/overlay.png");
+				background: url("../images/overlay.png"), url("../images/overlay.png");
 				opacity: 1.0;
 			}
 
